feat: so sd testcases: validation testcases done
